# Miktos-Agentic-System

./: .dockerignore  .env.example  .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_CONTRACT.md  Dockerfile  LICENSE  NOTICE  PRODUCT_POSITIONING.md  README.md  SECURITY.md  docker-compose.yml  main.py  main_coordinator.py  main_epiphan.py  main_kosmos.py  main_post_stream.py  main_preflight.py  main_streamlab.py  miktos.spec  miktos_entry.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py
data/messages/: subscriptions.example.json
data/templates/: council_announcement_enfr.json  emergency_briefing.json  full_simulation_enfr.json  press_conference_enfr.json  single_language.json  training_session.json
docs/: ADR-006-python-version.md  ARCHITECTURE.md  CHECKLIST.md  DECISIONS.md  GLOSSARY.md  HARDENING.md  INSTALL.md  PHASE10.md  PHASE10b.md  PHASE11.md  PHASE12.md  PHASE13.md  PHASE14.md  PHASE19b.md  PHASE19c.md  PHASE7A.md  PHASE7B.md  PHASE8.md  PHASE9.md  PRODUCT.md  ROADMAP.md
domains/: __init__.py
domains/captioning/: __init__.py  caption_worker.py
domains/epiphan/: __init__.py
domains/file_analyzer/: __init__.py
domains/kosmos/: __init__.py
domains/streamlab/: __init__.py
domains/streamlab_post/: __init__.py  coordinator.py
electron/: main.js  package.json  preload.js
engine/: __init__.py  action_log.py  paths.py  rehearsal.py  runofshow.py
engine/adapters/: __init__.py  base.py  obs_adapter.py  pearl_adapter.py  registry.py  rehearsal_adapter.py
engine/benchmarks/: parallel_benchmark.py
engine/coordinator/: __init__.py  coordinator.py  workers.py
engine/graph/: graph_builder.py  nodes.py  router.py  state.py
engine/messaging/: __init__.py  bus.py  models.py
engine/models/: schemas.py
engine/services/: state_store.py
engine/tools/: base_tool.py  shared_tools.py
scripts/: README.md  build_app.sh  build_server.py  clean_sessions.py  clear_inbox.py  dmo_preview.py  pearl_control.py  prepare_session.py  reset_layout_log.py  run_session.py  session_status.py  youtube_auth.py
tests/: test_classifier.py  test_hardening_clean_sessions.py  test_hardening_clear_inbox.py  test_hardening_prepare_session.py  test_hardening_run_session.py  test_kosmos_domain.py  test_milestone_1_2.py  test_milestone_1_3.py  test_milestone_1_4.py  test_phase_10a_web.py  test_phase_10b_runner.py  test_phase_11_dual_channel.py  test_phase_12_onboarding.py  test_phase_14.py  test_phase_15.py  test_phase_16.py  test_phase_17.py  test_phase_18.py  test_phase_19_smoke.py  test_phase_4a_parallel.py  test_phase_4b_messaging.py  test_phase_4c_coordinator.py  test_phase_4d_pubsub.py  test_phase_5_post_stream.py  test_phase_6_preflight.py  test_phase_7a_report.py  test_phase_7b_status.py  test_phase_8a_epiphan.py  test_phase_8b_layout_control.py  test_state_store.py  test_streamlab_domain.py
web/: server.py
web/api/: action_log.py  adapters.py  audio_control.py  auth.py  captions.py  graphics.py  health.py  onboarding.py  pearl.py  preview.py  rehearsal.py  runner.py  runofshow.py  safe_mode.py  session.py  status.py  switcher.py  templates.py
(+76 files in other folders)
