[project]
name = "miktos-agentic-system"
version = "0.1.0"
description = "Miktos Agentic System -- Closed-Loop Orchestration Engine"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "typing-extensions>=4.0.0",
    "Pillow>=10.0.0",
    "piexif>=1.1.3",
    "obsws-python>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_core.*",
    "piexif.*",
    "PIL.*",
    "obsws_python.*",
]
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*", "domains*"]
